[gd_scene load_steps=32 format=2]

[ext_resource path="res://Player/Slime.gd" type="Script" id=1]
[ext_resource path="res://Player/sprites/Slime_original_size/Slime_idle.png" type="Texture" id=2]
[ext_resource path="res://Player/sprites/Slime_original_size/Slime_roost.png" type="Texture" id=3]
[ext_resource path="res://Player/sprites/Slime_original_size/Slime_mid_jump.png" type="Texture" id=4]
[ext_resource path="res://Player/sprites/Slime_original_size/Slime_appuye.png" type="Texture" id=5]
[ext_resource path="res://Player/sprites/Slime_original_size/Slime_jumping.png" type="Texture" id=6]
[ext_resource path="res://Player/sprites/Slime_original_size/Slime_down.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/slime.jiggle.png" type="Texture" id=8]
[ext_resource path="res://Code/GUI/Camera2D.gd" type="Script" id=9]
[ext_resource path="res://Sprites/GUI/life_gui1.png" type="Texture" id=10]
[ext_resource path="res://Sprites/GUI/life_gui3.png" type="Texture" id=11]
[ext_resource path="res://Sprites/GUI/life_gui2.png" type="Texture" id=12]
[ext_resource path="res://Player/life_bar.gd" type="Script" id=13]
[ext_resource path="res://Fonts/AlteHaasGroteskBold.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://Sprites/GUI/mana_bar_over.png" type="Texture" id=15]
[ext_resource path="res://Sprites/GUI/mana_bar_progress.png" type="Texture" id=16]
[ext_resource path="res://Player/mana_bar.gd" type="Script" id=17]
[ext_resource path="res://Sprites/DÃ©co/light_test.png" type="Texture" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "slide",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "jump_end_air",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "jump_end_ground",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "jump_start_ground",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "jump_start_air",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "jump_middle",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "idle"

[sub_resource type="Animation" id=3]
resource_name = "jump_end_air"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "jump_end_air" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "jump_end_ground"
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "jump_end_ground" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "jump_middle"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "jump_middle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "jump_start_air"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "jump_start_air" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "jump_start_ground"
length = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "jump_start_ground" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "slide"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "slide" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Wall_radar_D/CollisionShape2D2:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Wall_radar_D/CollisionShape2D2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 80, 26 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Wall_radar_D/CollisionShape2D2:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../Wall_radar_G/CollisionShape2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = false
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -146.82, 4.23 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../Wall_radar_G/CollisionShape2D:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = false
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../Wall_radar_G/CollisionShape2D:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = false
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath(".:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = false
tracks/8/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.2, 0.25, 0.3, 0.35, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0.57, 0.57 ), Vector2( 0.65, 0.57 ), Vector2( 0.7, 0.57 ), Vector2( 0.65, 0.57 ), Vector2( 0.57, 0.57 ), Vector2( 0.57, 0.65 ), Vector2( 0.57, 0.7 ), Vector2( 0.57, 0.65 ), Vector2( 0.57, 0.57 ) ]
}

[sub_resource type="DynamicFont" id=9]
size = 81
font_data = ExtResource( 14 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 3.13522, 22.8928 )

[sub_resource type="OccluderPolygon2D" id=11]
cull_mode = 1
polygon = PoolVector2Array( -5.94403, -49.3588, 24.4559, -46.8254, 54.4338, -28.2477, 68.3671, -10.0921, 72.1672, 16.9302, 69.958, 41.9066, 50.2116, 62.108, 36.7005, 65.4858, -30.8551, 65.0635, -50.6995, 59.9969, -66.744, 46.908, -73.0773, 21.9969, -67.1662, -12.2031, -43.0995, -37.9587, -23.6774, -45.5587 )

[sub_resource type="CapsuleShape2D" id=12]
radius = 23.3988
height = 32.3652

[sub_resource type="CapsuleShape2D" id=13]
radius = 22.977

[node name="Player" type="KinematicBody2D" groups=[
"Player",
"Player_element",
]]
position = Vector2( 687.502, 536.676 )
z_index = 2
collision_layer = 2
collision_mask = 25
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.847059 )
position = Vector2( -1.33771, 31.5905 )
scale = Vector2( 0.285, 0.285 )
frames = SubResource( 1 )
animation = "slide"

[node name="anim" type="AnimationPlayer" parent="AnimatedSprite"]
anims/idle = SubResource( 2 )
anims/jump_end_air = SubResource( 3 )
anims/jump_end_ground = SubResource( 4 )
anims/jump_middle = SubResource( 5 )
anims/jump_start_air = SubResource( 6 )
anims/jump_start_ground = SubResource( 7 )
anims/slide = SubResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.819608 )
position = Vector2( 0, -11.45 )
scale = Vector2( 3, 2.6 )
texture = ExtResource( 8 )
vframes = 3
hframes = 8
frame = 13
region_rect = Rect2( 4, 2, 28, 27 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="."]
position = Vector2( -3, 15 )
scale = Vector2( 0.5, 0.5 )
polygon = PoolVector2Array( -3.23163, -38.6612, 22.5931, -35.499, 49.9989, -22.8501, 64.2289, -8.09314, 71.0093, 3.72504, 73.2339, 24.664, 67.1396, 42.5884, 55.3095, 51.5507, 39.9615, 55.9959, 20.2821, 59.5076, -27.7581, 59.5076, -48.8289, 55.6211, -57.4398, 53.4044, -65.0276, 48.9711, -70.4841, 43.6852, -73.5908, 37.4954, -76.226, 21.1573, -74.1052, 8.27173, -69.9286, -0.478943, -63.2662, -10.4229, -54.354, -20.215, -33.5361, -32.0732 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -700 )
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 3.0
drag_margin_left = 0.0
drag_margin_top = 0.5
drag_margin_right = 0.0
drag_margin_bottom = 0.7
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource( 9 )
pos = 51

[node name="size_tween" type="Tween" parent="."]

[node name="GUI" type="CanvasLayer" parent="."]

[node name="tween_mana" type="Tween" parent="GUI"]

[node name="life_bar" type="TextureProgress" parent="GUI"]
margin_left = 30.0
margin_top = 30.0
margin_right = 524.0
margin_bottom = 48.0
rect_scale = Vector2( 2.3, 2.3 )
value = 53.0
texture_under = ExtResource( 10 )
texture_over = ExtResource( 11 )
texture_progress = ExtResource( 12 )
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}
healthy_color = Color( 0, 1, 0.109804, 1 )
caution_color = Color( 0.972549, 1, 0.0980392, 1 )
danger_color = Color( 1, 0.298039, 0.298039, 1 )

[node name="pause" type="Button" parent="GUI" groups=[
"GUI",
]]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -176.0
margin_top = 30.0
margin_right = -76.0
margin_bottom = 60.0
rect_scale = Vector2( 1.5, 1.5 )
text = "PAUSE"

[node name="blob_score" type="Sprite" parent="GUI" groups=[
"GUI",
]]

[node name="score" type="Label" parent="GUI" groups=[
"GUI",
]]
margin_left = 30.0
margin_top = 307.805
margin_right = 75.0
margin_bottom = 404.805
custom_fonts/font = SubResource( 9 )
text = "0"

[node name="mana_bar" type="TextureProgress" parent="GUI"]
margin_left = 23.7433
margin_top = 81.8033
margin_right = 323.743
margin_bottom = 381.803
rect_scale = Vector2( 0.55, 0.55 )
texture_over = ExtResource( 15 )
texture_progress = ExtResource( 16 )
fill_mode = 3
tint_progress = Color( 0, 0.623529, 1, 1 )
script = ExtResource( 17 )

[node name="tir" type="Position2D" parent="."]
position = Vector2( 55.9278, -8.27948 )
scale = Vector2( 2, 2 )

[node name="Wall_radar_D" type="Area2D" parent="."]
position = Vector2( -2.85388, -4.51868 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Wall_radar_D"]
position = Vector2( 40, 27.061 )
shape = SubResource( 10 )

[node name="Wall_radar_G" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_radar_G"]
position = Vector2( -44.0628, 22.7539 )
shape = SubResource( 10 )

[node name="bottom_pos" type="Position2D" parent="."]
position = Vector2( -2.40418, 45.3091 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
visible = false
position = Vector2( -3, 15 )
scale = Vector2( 0.5, 0.5 )
occluder = SubResource( 11 )

[node name="timers" type="Node2D" parent="."]

[node name="timer_shoot" type="Timer" parent="timers"]

[node name="idle_timer" type="Timer" parent="timers"]

[node name="timer_bounce" type="Timer" parent="timers"]

[node name="hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2( -2.96231, 21.1471 )
rotation = 1.5708
shape = SubResource( 12 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -2.733, 21.7307 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 18 )
texture_scale = 0.5
color = Color( 0, 0.905882, 1, 1 )
energy = 0.4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -2.51624, 24.5001 )
rotation = 1.5708
shape = SubResource( 13 )
disabled = true
[connection signal="update_health_bar" from="." to="GUI/life_bar" method="_on_Player_update_health_bar"]
[connection signal="pressed" from="GUI/pause" to="." method="_on_pause_pressed"]
[connection signal="body_entered" from="Wall_radar_D" to="." method="_on_Wall_radar_D_body_entered"]
[connection signal="body_exited" from="Wall_radar_D" to="." method="_on_Wall_radar_D_body_exited"]
[connection signal="body_entered" from="Wall_radar_G" to="." method="_on_Wall_radar_G_body_entered"]
[connection signal="body_exited" from="Wall_radar_G" to="." method="_on_Wall_radar_G_body_exited"]
[connection signal="timeout" from="timers/timer_shoot" to="." method="_on_timer_shoot_timeout"]
[connection signal="timeout" from="timers/idle_timer" to="." method="_on_idle_timer_timeout"]
[connection signal="timeout" from="timers/timer_bounce" to="." method="_on_timer_bounce_timeout"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
